--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,1 @@
-{"api":"1.0.0","editorType":["figma"],"id":"figma-plugin","name":"Plugin","main":"build/main.js","ui":"build/ui.js"}
+{"api":"1.0.0","editorType":["figma"],"id":"figma-plugin","name":"Figma to API","main":"build/main.js","ui":"build/ui.js"}
