--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "devDependencies": {
     "@create-figma-plugin/build": "^2.2.0",
     "@create-figma-plugin/tsconfig": "^2.2.0",
-    "@figma/plugin-typings": "1.57.1",
+    "@figma/plugin-typings": "^1.57.1",
     "@types/prismjs": "^1.26.0",
     "@types/react": ">=18",
     "react": ">=18",
@@ -25,7 +25,7 @@
       "figma"
     ],
     "id": "figma-plugin",
-    "name": "Plugin",
+    "name": "Figma to API",
     "main": "src/main.ts",
     "ui": "src/ui.tsx"
   }
